--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring6</artifactId>
             <version>3.1.1.RELEASE</version>
