--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,14 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring.version>6.0.6</spring.version>
         <mockito.version>5.2.0</mockito.version>
     </properties>
+
 
     <name>gift-certificate-system Maven Webapp</name>
     <url>http://maven.apache.org</url>
@@ -147,5 +149,17 @@
 
     <build>
         <finalName>gift-certificate-system</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
