Created prod config

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/postgres
-jdbc.username=postgres
-jdbc.password=postgres
+jdbc.url=jdbc:postgresql://localhost:5432/prod_database
+jdbc.username=prod_user
+jdbc.password=prod_user
 jdbc.connectionTimeout=30000
 jdbc.idleTimeout=600000
 jdbc.maxLifetime=1800000
