--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,11 @@
+spring.datasource.url=jdbc:h2:mem:test
+spring.flyway.enabled=true
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.integration.envers.enabled=false
+
