Roles with JWT auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,14 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 
 logging.level.root=INFO
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=TRACE
 logging.level.org.hibernate=ERROR
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c{1}:%L - %m%n
