--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 
 logging.level.root=INFO
-logging.level.org.springframework.web=TRACE
+logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c{1}:%L - %m%n
