--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c{1}:%L - %m%n
 logging.file.name=${catalina.home}/logs/myapp.log
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=10
+
+jwt.secret = secret
