--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,17 @@ spring.datasource.hikari.minimum-idle=5
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+server.servlet.context-path=/gift-certificate-system
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c{1}:%L - %m%n
+
+spring.security.oauth2.client.registration.google.client-id=757781514134-m5vrlckiau0rmm4eq4kocm88m2fufjno.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
