--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
+                <version>0.8.6</version>
                 <executions>
                     <execution>
                         <goals>
@@ -145,21 +145,14 @@
                         </goals>
                     </execution>
                     <execution>
-                        <id>jacoco-report</id>
-                        <phase>test</phase>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>target/jacoco-report</outputDirectory>
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-
-
     </build>
-
 </project>
