--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.integration.envers.enabled=false
+spring.jpa.properties.hibernate.show_sql=false
 
