--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.connection-timeout=30000
@@ -17,7 +17,6 @@ server.error.include-message=always
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
-
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c{1}:%L - %m%n
 
 jwt.secret = secret
