--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,4 +9,6 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.integration.envers.enabled=false
 spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.open-in-view=false
+
 
