--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=local
 
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
